move frontend logic out of template

--- a/app/views/consumingTable.scala.html
+++ b/app/views/consumingTable.scala.html
@@ -1,6 +1,7 @@
 @import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
 @import kafka.coordinator.group.ALIAS.Topic
 @import org.apache.kafka.streams.kstream.Windowed
+@import util.Frontend
 @(details: Map[String, Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
 @defining(Seq[String]("rdkafka", "ruby-kafka", "consumer-1")) { riskClientIDS =>
 
@@ -22,11 +23,7 @@
     <tbody>
     @for((c,ds) <- details) {
       @for(d <- ds) {
-        @if(riskClientIDS.contains(d._2.clientId)){
-          <tr class="text-light risk">
-          } else if (d._2.group.startsWith("_") || d._2.clientId.startsWith("perf") || d._2.clientId.startsWith("console")){
-        <tr class="text-muted">
-      } else{<tr>}
+        <tr class="@Frontend.colorRow(d._2)">
         <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().start()))</td>
         <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().end()))</td>
         <td rowspan=@(d._3.size) >@(d._2.group)</td>
