--- a/app/views/consumingTable.scala.html
+++ b/app/views/consumingTable.scala.html
@@ -2,7 +2,7 @@
 @import kafka.coordinator.group.ALIAS.Topic
 @import org.apache.kafka.streams.kstream.Windowed
 @import util.Frontend
-@(details: Map[String, Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
+@(details: Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])])
 @defining(Seq[String]("rdkafka", "ruby-kafka", "consumer-1")) { riskClientIDS =>
 
 <div class="table-responsive">
@@ -21,32 +21,30 @@
     </tr>
     </thead>
     <tbody>
-    @for((c,ds) <- details) {
-      @for(d <- ds) {
-        <tr class="@Frontend.colorRow(d._2)">
-        <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().start()))</td>
-        <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().end()))</td>
-        <td rowspan=@(d._3.size) >@(d._2.group)</td>
-        <td rowspan=@(d._3.size) >
-          <a href=@("/client/" + d._2.clientId)> @(d._2.clientId) </a>
-        </td>
-        <td>@(d._3.head._1)</td>
-        <td>@(d._3.head._2.size)</td>
+    @for(d <- details) {
+      <tr class="@Frontend.colorRow(d._2)">
+      <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().start()))</td>
+      <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().end()))</td>
+      <td rowspan=@(d._3.size) >@(d._2.group)</td>
+      <td rowspan=@(d._3.size) >
+        <a target="_blank" href=@("/client/" + d._2.clientId)> @(d._2.clientId) </a>
+      </td>
+      <td>@(d._3.head._1)</td>
+      <td>@(d._3.head._2.size)</td>
+    </tr>
+
+      @for(consumingDetails <- d._3.tail) {
+        @if(riskClientIDS.contains(d._2.clientId)){
+          <tr class="text-light risk">
+          } else if (d._2.group.startsWith("_") || d._2.clientId.startsWith("perf") || d._2.clientId.startsWith("console")){
+        <tr class="text-muted">
+      } else{<tr>}
+        <td>@consumingDetails._1</td>
+        <td>@consumingDetails._2.size</td>
       </tr>
-
-        @for(consumingDetails <- d._3.tail) {
-          @if(riskClientIDS.contains(d._2.clientId)){
-            <tr class="text-light risk">
-            } else if (d._2.group.startsWith("_") || d._2.clientId.startsWith("perf") || d._2.clientId.startsWith("console")){
-          <tr class="text-muted">
-        } else{<tr>}
-          <td>@consumingDetails._1</td>
-          <td>@consumingDetails._2.size</td>
-        </tr>
-        }
       }
-
     }
+
     </tbody>
   </table>
 </div>
