--- a/app/views/client.scala.html
+++ b/app/views/client.scala.html
@@ -16,7 +16,7 @@
 @if(details.isEmpty){
 <p>No Details about this client, the client maybe not exist or Kafka stream still looking</p>
 }else {
-@if(riskClientIDS.contains(clientId)){
+@if(riskClientIDS.contains(clientId) || riskClientIDS.exists(clientId.startsWith(_))  ){
 
 <blockquote class="risk text-light">
   <p>Please notify the author of this application to set a client id.</p>
