Change the type sent to the ui

--- a/app/views/consumingTable.scala.html
+++ b/app/views/consumingTable.scala.html
@@ -1,8 +1,7 @@
 @import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
 @import kafka.coordinator.group.ALIAS.Topic
 @import org.apache.kafka.streams.kstream.Windowed
-@import org.apache.kafka.streams.KeyValue
-@(details: Seq[KeyValue[Windowed[String], (ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
+@(details: Map[ClientDetails, Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
 @defining(Seq[String]("rdkafka", "ruby-kafka", "consumer-1")) { riskClientIDS =>
 
 <div class="table-responsive">
@@ -13,7 +12,7 @@
       <th rowspan="2">#End</th>
       <th rowspan="2">Group ID</th>
       <th rowspan="2">Client</th>
-      <th colspan="2" >Consuming Details</th>
+      <th colspan="2">Consuming Details</th>
     </tr>
     <tr>
       <th>Topics</th>
@@ -21,29 +20,33 @@
     </tr>
     </thead>
     <tbody>
-    @for(d <- details) {
-    @if(riskClientIDS.contains(d.value._1.clientId)){
+    @for((c,ds) <- details) {
+    @for(d <- ds) {
+    @if(riskClientIDS.contains(c.clientId)){
     <tr class="text-light risk">
-    } else if (d.value._1.group.startsWith("_") || d.value._1.clientId.startsWith("perf") || d.value._1.clientId.startsWith("console")){
-      <tr class="text-muted">
-    } else{<tr>}
-      <td rowspan=@(d.value._2.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d.key.window().start()))</td>
-      <td rowspan=@(d.value._2.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d.key.window().end()))</td>
-      <td rowspan=@(d.value._2.size) >@d.value._1.group</td>
-      <td rowspan=@(d.value._2.size) >@d.value._1.clientId</td>
-      <td>@d.value._2.head._1</td>
-      <td>@d.value._2.head._2.size</td>
+      } else if (c.group.startsWith("_") || c.clientId.startsWith("perf") || c.clientId.startsWith("console")){
+    <tr class="text-muted">
+      } else{<tr>}
+      <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().start()))</td>
+      <td rowspan=@(d._3.size) >@("%1$tH:%1$tM:%1$tS.%1$tL %1$tY.%1$tm.%1$td".format(d._1.window().end()))</td>
+      <td rowspan=@(d._3.size) >@(c.group)</td>
+      <td rowspan=@(d._3.size) >@(c.clientId)</td>
+      <td>@(d._3.head._1)</td>
+      <td>@(d._3.head._2.size)</td>
     </tr>
-    @for(consumingDetails <- d.value._2.tail) {
-    @if(riskClientIDS.contains(d.value._1.clientId)){
+
+    @for(consumingDetails <- d._3.tail) {
+    @if(riskClientIDS.contains(c.clientId)){
     <tr class="text-light risk">
-      } else if (d.value._1.group.startsWith("_") || d.value._1.clientId.startsWith("perf") || d.value._1.clientId.startsWith("console")){
+      } else if (c.group.startsWith("_") || c.clientId.startsWith("perf") || c.clientId.startsWith("console")){
     <tr class="text-muted">
       } else{<tr>}
       <td>@consumingDetails._1</td>
       <td>@consumingDetails._2.size</td>
     </tr>
     }
+    }
+
     }
     </tbody>
   </table>
