--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,7 @@
 @import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
 @import kafka.coordinator.group.ALIAS.Topic
 @import org.apache.kafka.streams.kstream.Windowed
-@import org.apache.kafka.streams.KeyValue
-@(details: Seq[KeyValue[Windowed[String], (ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
+@(details: Map[ClientDetails, Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])]])
 
 @main("Kafka Active Consumers") {
 
