--- a/app/views/consumingTable.scala.html
+++ b/app/views/consumingTable.scala.html
@@ -3,7 +3,6 @@
 @import org.apache.kafka.streams.kstream.Windowed
 @import util.Frontend
 @(details: Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])])
-@defining(Seq[String]("rdkafka", "ruby-kafka", "consumer-1", "nonode@nohost")) { riskClientIDS =>
 
 <div class="table-responsive">
   <table class="table table-bordered">
@@ -34,18 +33,14 @@
     </tr>
 
       @for(consumingDetails <- d._3.tail) {
-        @if(riskClientIDS.contains(d._2.clientId) || riskClientIDS.exists(d._2.clientId.startsWith(_))  ){
-          <tr class="text-light risk">
-          } else if (d._2.group.startsWith("_") || d._2.clientId.startsWith("perf") || d._2.clientId.startsWith("console")){
-        <tr class="text-muted">
-      } else{<tr>}
-        <td>@consumingDetails._1</td>
-        <td>@consumingDetails._2.size</td>
-      </tr>
-      }
+          <tr class="@Frontend.colorRow(d._2)">
+            <td>@consumingDetails._1</td>
+            <td>@consumingDetails._2.size</td>
+          </tr>
+
+    }
     }
 
     </tbody>
   </table>
 </div>
-}
