--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,7 +22,7 @@
     <body>
 
       <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-          <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Kafka Active Consumers</a>
+          <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Kafka Active Consumers</a>
         </nav>
 
         <div class="container-fluid">
@@ -31,8 +31,13 @@
               <div class="sidebar-sticky px-4">
                 <ul class="nav flex-column">
                   <li class="nav-item">
-                    <a class="nav-link active" href="/all">
+                    <a class="nav-link active" href="/">
                       Dashboard <span class="sr-only">(current)</span>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/all">
+                      Latest Active Consumers <span class="sr-only">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
