--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-xs-6 col-md-4">
         <div class="panel panel-primary">
-          <div class="panel-heading">Internal Stream Topics</div>
+          <div class="panel-heading">Active Stream Topics</div>
           <div class="panel-body text-primary">@Frontend.internalStreamTopics(details).size</div>
         </div>
       </div>
