--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,27 +1,27 @@
 @*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
+* This template is called from the `index` template. This template
+* handles the rendering of the page header and body tags. It takes
+* two arguments, a `String` for the title of the page and an `Html`
+* object to insert into the body of the page.
+*@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css")">
-        <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
+<head>
+    @* Here's where we render the page title `String`. *@
+    <title>@title</title>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css")">
+    <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
     </head>
     <body>
 
-      <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+        <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
           <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Kafka Active Consumers</a>
         </nav>
 
@@ -36,36 +36,50 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/all">
-                      Latest Active Consumers <span class="sr-only">(current)</span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="/last-five-minutes">
-                      Last Five Minutes <span class="sr-only">(current)</span>
-                    </a>
+                    <ul class="nav nav-list collapse in" id="submenu1" aria-expanded="true" style="">
+                        <li>
+                            <a class="accordion-heading" data-toggle="collapse" data-target="#consumerMenu">
+                                Consumers<span class="pull-right"><b class="caret"></b></span>
+                            </a>
+                            <div class="nav nav-list collapse" id="consumerMenu">
+                                <ul  class="nav nav-list">
+                                    <li>
+                                        <a class="nav-link active" href="/all">
+                                          Latest Active Consumers <span class="sr-only">(current)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link active" href="/last-five-minutes">
+                                          Last Five Minutes <span class="sr-only">(current)</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="form-group">
+                                    <div class='input-group date' id='datetimepicker6'>
+                                        <input type='text' class="form-control" />
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class='input-group date' id='datetimepicker7'>
+                                        <input type='text' class="form-control" />
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <button type="button" class="btn btn-primary" id="datetimepicker-submit">Search</button>
+                            </div>
+                        </li>
+                    </ul>
+
                   </li>
                 </ul>
-
-                <div class="form-group">
-                    <div class='input-group date' id='datetimepicker6'>
-                        <input type='text' class="form-control" />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class='input-group date' id='datetimepicker7'>
-                        <input type='text' class="form-control" />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
-                </div>
-
-                <button type="button" class="btn btn-primary" id="datetimepicker-submit">Search</button>
 
               </div>
             </nav>
