--- a/app/views/between.scala.html
+++ b/app/views/between.scala.html
@@ -1,5 +1,5 @@
 @import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
-@import kafka.coordinator.group.ALIAS.Topic
+@import kafka.coordinator.group.Topic
 @import org.apache.kafka.streams.kstream.Windowed
 @import org.apache.kafka.streams.KeyValue
 @(details: Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])], from:Long, to:Long)
