--- a/app/views/client.scala.html
+++ b/app/views/client.scala.html
@@ -1,5 +1,5 @@
 @import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
-@import kafka.coordinator.group.ALIAS.{Topic, GroupId}
+@import kafka.coordinator.group.{Topic, GroupId}
 @import util.KafkaUtils.UserName
 @import org.apache.kafka.streams.kstream.Windowed
 @import org.apache.kafka.streams.KeyValue
