--- a/app/views/loading.scala.html
+++ b/app/views/loading.scala.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
     @* Here's where we render the page title `String`. *@
-        <title>Kafka Active Consumers</title>
+        <title>RooWhoo</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/loading.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
