--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @import org.apache.kafka.streams.kstream.Windowed
 @(details: Seq[(Windowed[String], ClientDetails, Map[Topic, Set[ConsumerInstanceDetails]])])
 
-@main("Kafka Active Consumers") {
+@main("RooWhoo - Latest Active Consumers ") {
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
   <h1 class="h2">Latest Active Consumers</h1>
