--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,14 +21,14 @@
     </head>
     <body>
 
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
           <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Kafka Active Consumers</a>
         </nav>
 
         <div class="container-fluid">
           <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-              <div class="sidebar-sticky">
+              <div class="sidebar-sticky px-4">
                 <ul class="nav flex-column">
                   <li class="nav-item">
                     <a class="nav-link active" href="/all">
