--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,9 +9,84 @@
     border-color: #dc3545;
 }
 .text-light {
-    color: #ffff;
+    color: #ffff !important;
 }
 
 .text-muted {
     color: #6c757d !important;
+}
+
+.bg-light {
+    background-color: #f8f9fa !important;
+}
+
+.px-4 {
+    padding-left: 1.5rem !important;
+}
+
+.p-0 {
+    padding: 0 !important;
+}
+.sticky-top {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+.p-0 {
+    padding: 0 !important;
+}
+
+.flex-md-nowrap {
+    -ms-flex-wrap: nowrap !important;
+    flex-wrap: nowrap !important;
+}
+.bg-dark {
+    background-color: #343a40 !important;
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.sidebar-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 48px;
+    height: calc(100vh - 48px);
+    padding-top: .5rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.pt-3{
+    padding-top: 1rem !important;
+}
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.navbar {
+    border-radius: 0px !important;
+    margin-bottom: 0px !important;
 }
