--- a/app/views/client.scala.html
+++ b/app/views/client.scala.html
@@ -1,16 +1,15 @@
-@import kafka.coordinator.group.{ClientDetails,ConsumerInstanceDetails}
-@import kafka.coordinator.group.{Topic, GroupId}
+@import models._
 @import util.KafkaUtils.UserName
 @import org.apache.kafka.streams.kstream.Windowed
 @import org.apache.kafka.streams.KeyValue
 @import util.Frontend
 
-@(details: Map[GroupId , Map[Topic, Set[ConsumerInstanceDetails]]], clientId: String, aclsDetails: Map[(GroupId, Topic), Set[UserName]], adminAcls: Set[UserName])
+@(details: Map[GroupId , Map[TopicName, Set[ConsumerInstanceDetails]]], clientId: String, aclsDetails: Map[(GroupId, TopicName), Set[UserName]], adminAcls: Set[UserName])
 
 @main("RooWhoo - Client " + clientId) {
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-  <h1 class="h2">Details for client <i>"@clientId"</i></h1>
+    <h1 class="h2">Details for client <i>"@clientId"</i></h1>
 </div>
 
 @if(details.isEmpty){
@@ -19,55 +18,54 @@
 @if(Frontend.isRisky(clientId)){
 
 <blockquote class="risk text-light">
-  <p>Please notify the author of this application to set a client id.</p>
+    <p>Please notify the author of this application to set a client id.</p>
 </blockquote>
 }
 <div class="table-responsive">
-  <table class="table table-bordered">
-    <thead class="thead-dark">
-    <tr>
-      <th rowspan="2">Group ID</th>
-      <th rowspan="2">Topic</th>
-      <th rowspan="2">Potential Users</th>
-      <th colspan="3" >Consumer Details</th>
-    </tr>
-    <tr>
-      <th>Consumer Id</th>
-      <th>Consumer IP</th>
-      <th>Assigned Partition</th>
-    </tr>
-    </thead>
-    <tbody>
+    <table class="table table-bordered">
+        <thead class="thead-dark">
+        <tr>
+            <th rowspan="2">Group ID</th>
+            <th rowspan="2">Topic</th>
+            <th rowspan="2">Potential Users</th>
+            <th colspan="3" >Consumer Details</th>
+        </tr>
+        <tr>
+            <th>Consumer Id</th>
+            <th>Consumer IP</th>
+            <th>Assigned Partition</th>
+        </tr>
+        </thead>
+        <tbody>
 
-    @for(gd <- details) {
-      <tr>
-        <td rowspan=@(gd._2.size + gd._2.foldLeft[Int](0)(_ + _._2.size)) >
-          @gd._1
-        </td>
-        @for(t <- gd._2) {
-        <td rowspan=@(t._2.size + 1) >@t._1</td>
-        <td rowspan=@(t._2.size + 1) >
-          @if(aclsDetails.get((gd._1, t._1)).isEmpty){
-            <b>There's no specific user, the client could be using one of the admin users</b>
-            <ul>@for(usr <- adminAcls){<li>@usr</li>}</ul>
-          }else{
-          <ul>@for(usr <- aclsDetails.get((gd._1, t._1)).get){<li>@usr</li>}</ul>
-          }
-        </td>
+        @for(gd <- details) {
+        <tr>
+            <td rowspan=@(gd._2.size + gd._2.foldLeft[Int](0)(_ + _._2.size)) >
+                @gd._1
+            </td>
+            @for(t <- gd._2) {
+            <td rowspan=@(t._2.size + 1) >@t._1</td>
+            <td rowspan=@(t._2.size + 1) >
+                @if(aclsDetails.get((gd._1, t._1)).isEmpty){
+                <b>There's no specific user, the client could be using one of the admin users</b>
+                <ul>@for(usr <- adminAcls){<li>@usr</li>}</ul>
+                }else{
+                <ul>@for(usr <- aclsDetails.get((gd._1, t._1)).get){<li>@usr</li>}</ul>
+                }
+            </td>
 
-      </tr>
-      @for(i <- t._2) {
-      <tr>
-          <td> @i.id </td>
-          <td> @i.host </td>
-          <td> @i.assignedPartitions.filter(_._1 == t._1).map(_._2).toSeq.sortWith(_ < _).mkString(", ") </td>
-      </tr>
-      }
-    }
-    }
-    </tbody>
-  </table>
-
+        </tr>
+        @for(i <- t._2) {
+        <tr>
+            <td> @i.id </td>
+            <td> @i.host </td>
+            <td> @i.assignedPartitions.filter(_._1 == t._1).map(_._2).toSeq.sortWith(_ < _).mkString(", ") </td>
+        </tr>
+        }
+        }
+        }
+        </tbody>
+    </table>
 </div>
 
 }
